k8s/chat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: chat
  name: chat
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
spec:
  ports:
  - name: "5003"
    port: 5003
    targetPort: 5003
  selector:
    service: chat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: chat
  name: chat
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
spec:
  replicas: 1
  selector:
    matchLabels:
      service: chat
  template:
    metadata:
      labels:
        service: chat
    spec:
      containers:
      - image: asia-docker.pkg.dev/peerpre-g42/peerprep/chat
        imagePullPolicy: Always
        name: chat
        ports:
        - containerPort: 5003
