k8s/collaboration.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: collaboration
  name: collaboration
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5002
  selector:
    service: collaboration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: collaboration
  name: collaboration
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
spec:
  replicas: 1
  selector:
    matchLabels:
      service: collaboration
  template:
    metadata:
      labels:
        service: collaboration
    spec:
      containers:
      - image: asia-docker.pkg.dev/peerpre-g42/peerprep/collaboration
        imagePullPolicy: Always
        name: collaboration
        ports:
        - containerPort: 5002
