k8s/match.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: match2
  name: match2
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 5001
  selector:
    service: match2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: match2
  name: match2
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "ccai-backendconfig"}'
spec:
  replicas: 1
  selector:
    matchLabels:
      service: match2
  template:
    metadata:
      labels:
        service: match2
    spec:
      containers:
      - image: asia-docker.pkg.dev/peerpre-g42/peerprep/match2
        imagePullPolicy: Always
        name: match2
        ports:
        - containerPort: 5001
