k8s/users.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: users
  name: users
  namespace: default
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    service: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: users
  name: users
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: users
  template:
    metadata:
      labels:
        service: users
    spec:
      containers:
      - image: asia-docker.pkg.dev/peerpre-g42/peerprep/users
        imagePullPolicy: Always
        name: users
        ports:
        - containerPort: 5000
